# termtext

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  testpalette.py
assets/: palette.txt
src/model/: item.py  user.py
src/model/post/: ask.py  comment.py  job.py  opt.py  pool.py  story.py
src/tools/: image2ascii.py  parser.py
src/ui/: welcome.py
tests/: test_comment.py  test_parser.py  test_post.py  test_story.py  test_view.py
