[tool.poetry]
name = "termtext"
version = "0.0.1"
homepage = "https://github.com/imsakg/termtext"
description = "Text User Interface using Rich"
readme = "README.md"
authors = ["Mert Sefa AKGUN <contact@msakg.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.3.0"
typing-extensions = { version = ">=4.0.0, <5.0", python = "<3.9" }

[tool.poetry.dev-dependencies]

pytest = "^6.2.3"
black = "^22.3.0"
mypy = "^0.910"
pytest-cov = "^2.12.1"
mkdocs = "^1.2.1"
mkdocstrings = "^0.15.2"
mkdocs-material = "^7.1.10"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
